--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "The analysis was performed using the IBM customer base that can be accessed in kaggle by the link https://www.kaggle.com/datasets/blastchar/telco-customer-churn.\n",
     "\n",
-    "The motivation of the analysis is to understand which factors take the client to the churn (when the client cancels the service in a certain period of time). Knowing which clients are favorable to the churn, the company can allocate years and offer discounts/benefits to retain the client.\n",
+    "The motivation of the analysis is to understand which factors take the client churn (when the client cancels the service in a certain period of time). Knowing which clients are favorable to the churn, the company can allocate years and offer discounts/benefits to retain the client.\n",
     "\n",
     "Some questions we will try to answer:\n",
     "\n",
